# sgt-seek

./: .gitignore  DEPLOYMENT.md  DOCUMENTATION.md  Makefile  README.md  SGT_PLATFORM_MAP.txt  SYSTEM_README.md  docker-compose.yml  post_phase5_database_structure.txt  post_phase5_database_structure_complete.txt  post_step5_database_structure.txt  test_governor_corrected.py
.github/workflows/: build-and-push.yml  cloud-sentry.yml
apps/admin-portal/: package.json
apps/ai-orchestrator/: .env.security  Dockerfile  doc_processor.py  doc_validator.py  main.py  ranking_engine.py  requirements.txt
apps/audit/: Cargo.toml  Cargo.toml.bak
apps/financing-service/: bidding.py
apps/frontend/: admin_dashboard.html  codegen.yml  deploy-frontend.sh  exporter_portal.html  next.config.js  (+9 more)
apps/identity/: Cargo.toml  Cargo.toml.bak  identity.db
apps/identity/src/: db.rs  governor_client.rs  governor_hook.rs  main.rs  server.rs
apps/identity/src/entities/: schema.sql
apps/identity/src/graphql/: types.graphql
apps/identity/src/migrations/: 20251226_create_credentials.sql  20251226_create_jurisdictions.sql  20251226_create_organizations.sql  20251226_create_roles.sql  20251226_create_users.sql
apps/identity/src/resolvers/: credential_resolver.rs  jurisdiction_resolver.rs  organization_resolver.rs  role_resolver.rs  user_resolver.rs
apps/negotiation/: Cargo.toml  Cargo.toml.bak
apps/negotiation/data/: negotiation.db
apps/telemetry-service/: Cargo.toml
apps/telemetry-service/src/: main.rs
docs/: TRADE_FOLDER_T_DEC_2025_001.txt  api_spec.json
reports/: risk_report_2025-12-26_22-28-03.csv
scripts/: generate_contract.py  health_watcher.sh  kill_switch.sh  sentry_maint.sh  trade_orchestrator.py
(+94 files in other folders)
