[package]
name = "sgt-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }

async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
jsonwebtoken = "9.3"
dotenvy = "0.15"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
