[package]
name = "sgt-negotiation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.7.5"
tokio = { version = "=1.38.0", features = ["full"] }
tower-http = { version = "=0.5.2", features = ["cors"] }
async-graphql = { version = "=7.0.6", features = ["chrono"] }
async-graphql-axum = "=7.0.6"
async-graphql-derive = "=7.0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.8", features = ["v4"] }
reqwest = { version = "=0.11.27", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenvy = "0.15"
